# AIAuditLog

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecard.yml
docs/: api.md  cli.md  event-envelope.md  getting-started.md  interoperability.md  roadmap.md  security.md
examples/basic/: event.json  legacy-event.json
examples/privacy/: minimal.yaml
examples/tampered/: README.md
reports/: v0.1-verification.md  v0.1.0a3-verification.md
src/ai_audit_log/: __init__.py  adapters.py  builder.py  canonical.py  chain.py  checkpoint.py  checkpoint_policy.py  cli.py  compression.py  constants.py  digest.py  ecosystem.py  exceptions.py  exports.py  ids.py  migration.py  models.py  otel.py  privacy.py  query.py  recorder.py  reports.py  rotation.py  schema.py  signatures.py  storage.py  time.py
src/ai_audit_log/schemas/: audit-event-v1.schema.json
tests/: test_core.py  test_roadmap_a2_a3.py
